--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,8 +1,8 @@
-- title: "Science Concierge: A fast content-based recommendation system for scientific publications"
-  authors: T Achakulvisut, DE Acuna, T Ruangrong, K Kording
-  journal: PloS one 11 (7), e0158423
-  url: https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0158423
-  year: 2016
+- title: "Usefulness of arterial spin labeling perfusion as an initial evaluation of status epilepticus"
+  authors: Kim TJ*, Choi JW*, Han M, Kim BG, Park SA, Huh K, Choi JY
+  journal: Scientific reports 11 
+  url: https://www.nature.com/articles/s41598-021-03698-7#Abs1
+  year: 2021
 - title: "Intellectual synthesis in mentorship determines success in academic careers"
   authors: JF Liénard, T Achakulvisut, DE Acuna, SV David
   journal: Nature communications 9 (1), 1-13
