--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,45 +1,45 @@
 - title: "Usefulness of arterial spin labeling perfusion as an initial evaluation of status epilepticus"
   authors: Kim TJ*, Choi JW*, Han M, Kim BG, Park SA, Huh K, Choi JY
-  journal: Scientific reports 2021 Dec 20;11:24218.
+  journal: Scientific reports 2021 
   url: https://www.nature.com/articles/s41598-021-03698-7#Abs1
   year: 2021
 - title: "Population pharmacokinetic model development and its relationship with adverse events of oxcarbazepine in adult patients with epilepsy. "
   authors: Jang Y*, Yoon S*, Kim TJ*, Lee S, Yu KS, Jang IJ, Chu K¶, Lee SK¶
-  journal: Scientific reports 2021 Mar 18;11(1):6370.
+  journal: Scientific reports 2021 
   url: https://www.nature.com/articles/s41598-021-85920-0
   year: 2021
 - title: "HLAs associated with perampanel-induced psychiatric adverse effects in a Korean population."
   authors: Jang Y*, Kim TJ*, Moon J*, Yang TW, Kim KT, Park BS, Lim JA, Jun JS, Lee ST, Jung KH, Park KI, Jung KY, Chu K¶, Lee SK¶
-  journal: Scientific reports 2020 Aug 12;10(1):13667.
+  journal: Scientific reports 2020 
   url: https://www.nature.com/articles/s41598-020-70601-1
   year: 2020
 - title: "Brain regions associated with periodic leg movements during sleep in restless legs syndrome"
   authors: Kim TJ*, Cha KS*, Lee S, Yang TW, Kim KT, Park BS, Jun JS, Lim JA, Byun JI, Sunwoo JS, Shin JW, Kim KH, Lee SK¶, Jung KY¶
-  journal: Scientific reports 2020 Jan 31;10(1):1615.
+  journal: Scientific reports 2020 
   url: https://www.nature.com/articles/s41598-020-58365-0
   year: 2020
 - title: "Prevalence and Characteristics of Restless Legs Syndrome in Korean Adults: A Study in Two Independent Samples of the General Population"
   authors: Kim TJ*, Cha KS*, Lee S, Yang TW, Kim KT, Park BS, Jun JS, Lim JA, Byun JI, Sunwoo JS, Shin JW, Kim KH, Lee SK¶, Jung KY¶
-  journal: Neuroepidemiology (2019) 52 (3-4): 193–204
+  journal: Neuroepidemiology (2019) 
   url: https://karger.com/ned/article/52/3-4/193/226978/Prevalence-and-Characteristics-of-Restless-Legs
   year: 2019
 - title: "The effect of dim light at night on cerebral hemodynamic oscillations during sleep: A near-infrared spectroscopy study"
   authors: Kim TJ, Lee BU, Sunwoo JS, Byun JI, Moon J, Lee ST, Jung KH, Chu K, Kim M, Lim JM, Lee E, Lee SK, Jung KY¶
-  journal: Chronobiology International 2017;34(10):1325-1338
+  journal: Chronobiology International 2017
   url: https://www.tandfonline.com/doi/full/10.1080/07420528.2017.1363225
   year: 2017
 - title: "Anti-LGI1 encephalitis is associated with unique HLA subtypes"
   authors: Kim TJ*, Lee ST*, Moon J, Sunwoo JS, Byun JI, Lim JA, Shin YW, Jun JS, Lee HS, Lee WJ, Yang AR, Choi Y, Park KI, Jung KH, Jung KY, Kim M, Lee SK¶, Chu K¶
-  journal: Annals of Neurology 2017 Feb;81(2):183-192
+  journal: Annals of Neurology 2017 
   url: https://onlinelibrary.wiley.com/doi/10.1002/ana.24860
   year: 2017
 - title: "HLA-B*40:02 and DRB1*04:03 are risk factors for oxcarbazepine-induced maculopapular eruption"
   authors: Moon J*, Kim TJ*, Lim JA, Sunwoo JS, Byun JI, Lee ST, Jung KH, Park KI, Jung KY, Jeon D, Yu KS, Jang IJ, Chu K¶, Lee SK¶
-  journal: Epilepsia 2016 Nov;57(11):1879-1886
+  journal: Epilepsia 2016 
   url: https://onlinelibrary.wiley.com/doi/10.1111/epi.13566
   year: 2016
 - title: "Clinical manifestations and outcomes of the treatment of patients with GABAB encephalitis"
   authors: Kim TJ, Lee ST¶, Shin JW, Moon J, Lim JA, Byun JI, Shin YW, Lee KJ, Jung KH, Kim YS, Park KI, Chu K, Lee SK
-  journal: Journal of Neuroimmunology 2014 May 15;270(1-2):45-50
+  journal: Journal of Neuroimmunology 2014
   url: https://www.sciencedirect.com/science/article/pii/S0165572814000617?via%3Dihub
   year: 2014
